Add background color
it is a green color

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -9,7 +9,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.c50x.eleos.activities.LoginActivity"
-    android:background="#e3e3e3">
+    android:background="@color/colorBackGround">
 
     <!-- Login progress -->
     <ProgressBar
