--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -38,12 +38,13 @@
                 <AutoCompleteTextView
                     android:id="@+id/email"
                     android:layout_width="match_parent"
-                    android:layout_height="55dp"
+                    android:layout_height="45dp"
+                    android:layout_weight="1"
                     android:background="@color/colortextfields"
                     android:hint="Email"
                     android:inputType="textEmailAddress"
                     android:maxLines="1"
-                    android:singleLine="true"/>
+                    android:singleLine="true" />
 
 
             </android.support.design.widget.TextInputLayout>
@@ -55,7 +56,9 @@
                 <EditText
                     android:id="@+id/password"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="45dp"
+                    android:layout_weight="1"
+                    android:background="@color/colortextfields"
                     android:hint="Password"
                     android:imeActionId="6"
                     android:imeActionLabel="@string/action_sign_in_short"
@@ -68,19 +71,23 @@
 
             <Button
                 android:id="@+id/email_sign_in_button"
-                style="?android:textAppearanceSmall"
-                android:layout_width="match_parent"
+                style="@android:style/Widget.Button"
+                android:layout_width="263dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
+                android:background="@color/colorButtons"
                 android:text="@string/action_sign_in"
                 android:textStyle="bold" />
+
             <Button
                 android:id="@+id/register_button"
-                android:layout_width="match_parent"
+                style="@android:style/Widget.Button"
+                android:layout_width="263dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
+                android:background="@color/colorButtons"
                 android:text="@string/action_register"
-                 />
+                android:textStyle="bold"/>
 
 
         </LinearLayout>
