--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#FF4081</color>
     <color name="colorBackGround">#C5E1A5</color>
     <color name="colortextfields">#DCEDC8</color>
+    <color name="colorButtons">#BDBDBD</color>
 </resources>
