--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -2,14 +2,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorBackGround"
     android:gravity="center_horizontal"
     android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.c50x.eleos.activities.LoginActivity"
-    android:background="@color/colorBackGround">
+    tools:context="com.c50x.eleos.activities.LoginActivity">
 
     <!-- Login progress -->
     <ProgressBar
@@ -70,7 +70,7 @@
             </android.support.design.widget.TextInputLayout>
 
             <Button
-                android:id="@+id/email_sign_in_button"
+                android:id="@+id/signIn_button"
                 style="@android:style/Widget.Button"
                 android:layout_width="263dp"
                 android:layout_height="wrap_content"
@@ -80,14 +80,14 @@
                 android:textStyle="bold" />
 
             <Button
-                android:id="@+id/register_button"
+                android:id="@+id/Register_button"
                 style="@android:style/Widget.Button"
                 android:layout_width="263dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
                 android:background="@color/colorButtons"
                 android:text="@string/action_register"
-                android:textStyle="bold"/>
+                android:textStyle="bold" />
 
 
         </LinearLayout>
