--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,15 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorPrimary"
     >
 
     <TextView
+        android:id="@+id/activity_main_user_handle_textView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="User handle:"
         android:textSize="24sp"
-        android:id="@+id/activity_main_user_handle_textView"/>
+        tools:textColor="@android:color/black"
+        />
 
     <TextView
         android:layout_width="match_parent"
@@ -17,6 +22,7 @@
         android:layout_below="@id/activity_main_user_handle_textView"
         android:text="User Name:"
         android:textSize="24sp"
+        tools:textColor="@android:color/black"
         android:id="@+id/activity_main_user_name_textView"/>
     <TextView
         android:layout_width="match_parent"
@@ -24,6 +30,7 @@
         android:layout_below="@id/activity_main_user_name_textView"
         android:text="User Email"
         android:textSize="24sp"
+        tools:textColor="@android:color/black"
         android:id="@+id/user_email_textView"
         />
     <Button
@@ -31,6 +38,10 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/user_email_textView"
         android:text="log out"
-        android:id="@+id/activity_main_logout_button"/>
+        android:id="@+id/activity_main_logout_button"
+        tools:textColor="@android:color/black"
+        android:background="@color/colorButtons"
+        android:layout_centerHorizontal="true"
+        />
 
 </RelativeLayout>
