--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,9 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colorPrimary">#009688</color>
+    <color name="colorPrimaryDark">#00796B</color>
     <color name="colorAccent">#FF4081</color>
-    <color name="colorBackGround">#c4f2fd</color>
-    <color name="colortextfields">#dbfbf0</color>
-    <color name="colorButtons">#BDBDBD</color>
+    <color name="colorButtons">#E0F2F1</color>
 </resources>
