--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,20 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorPrimary"
-    >
-
-    <TextView
-        android:id="@+id/activity_main_user_handle_textView"
+    android:background="@color/colorPrimary">
+    
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="User handle:"
-        android:textSize="24sp"
-        tools:textColor="@android:color/black"
-        />
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
+
+
+        <TextView
+            android:id="@+id/activity_main_user_handle_textView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="User handle:"
+            android:textSize="24sp"
+            tools:textColor="@android:color/black"
+            />
 
     <TextView
         android:layout_width="match_parent"
@@ -23,7 +29,8 @@
         android:text="User Name:"
         android:textSize="24sp"
         tools:textColor="@android:color/black"
-        android:id="@+id/activity_main_user_name_textView"/>
+        android:id="@+id/activity_main_user_name_textView"
+        />
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -34,4 +41,12 @@
         android:id="@+id/user_email_textView"
         />
 
-</RelativeLayout>
+    </LinearLayout>
+    
+    <android.support.design.widget.NavigationView
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        app:menu="">
+    </android.support.design.widget.NavigationView>
+
+</android.support.v4.widget.DrawerLayout>
