--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -46,7 +46,9 @@
     <android.support.design.widget.NavigationView
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        app:menu="">
+        app:menu="@menu/navigation_menu"
+        android:layout_gravity="start" >
+
     </android.support.design.widget.NavigationView>
 
 </android.support.v4.widget.DrawerLayout>
