--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,12 +5,13 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorPrimary">
-    
+    android:background="@color/colorPrimary"
+    android:id="@+id/drawerLayout">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="horizontal">
+        android:orientation="vertical">
 
 
         <TextView
@@ -19,31 +20,23 @@
             android:layout_height="wrap_content"
             android:text="User handle:"
             android:textSize="24sp"
-            tools:textColor="@android:color/black"
-            />
+            tools:textColor="@android:color/black" />
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/activity_main_user_handle_textView"
-        android:text="User Name:"
-        android:textSize="24sp"
-        tools:textColor="@android:color/black"
-        android:id="@+id/activity_main_user_name_textView"
-        />
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/activity_main_user_name_textView"
-        android:text="User Email"
-        android:textSize="24sp"
-        tools:textColor="@android:color/black"
-        android:id="@+id/user_email_textView"
-        />
+        <TextView
+
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="shit:"
+            android:textSize="24sp"
+            android:visibility="visible"
+            tools:textColor="@android:color/black" />
+
+
 
     </LinearLayout>
     
     <android.support.design.widget.NavigationView
+
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         app:menu="@menu/navigation_menu"
