--- a/app/src/main/res/layout/activity_create_game.xml
+++ b/app/src/main/res/layout/activity_create_game.xml
@@ -61,7 +61,7 @@
         android:textSize="18sp" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/Cancel_button"
         android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:layout_margin="100dp"
