--- a/app/src/main/res/layout/activity_create_game.xml
+++ b/app/src/main/res/layout/activity_create_game.xml
@@ -1,25 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorPrimary"
-    android:orientation="vertical">
+    android:addStatesFromChildren="true"
+    android:background="@color/colorPrimary">
 
     <TextView
         android:id="@+id/game_name_txt"
-        android:layout_width="97"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="wrap_content"
-        android:text="Game name"
-        android:textColor="@android:color/black"
         android:layout_marginTop="1"
+        android:text="Game name: "
+        android:textColor="@android:color/black"
         android:textSize="18sp" />
 
     <EditText
         android:id="@+id/game_name_input"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="100dp"
         android:text="game name" />
 
     <TextView
@@ -30,71 +30,5 @@
         android:text="Game type:"
         android:textColor="@android:color/black"
         android:textSize="18sp" />
+</GridLayout>
 
-    <EditText
-        android:id="@+id/game_type_input"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:text="game type" />
-
-    <TextView
-        android:id="@+id/number_of_players_txt"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:text="Number of players:"
-        android:textColor="@android:color/black"
-        android:textSize="18sp" />
-
-    <EditText
-        android:id="@+id/number of players_input"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:text="# of players" />
-
-    <TextView
-        android:id="@+id/game_location_txt"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:text="Location:"
-        android:textColor="@android:color/black"
-        android:textSize="18sp" />
-
-    <EditText
-        android:id="@+id/create_game_input"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:text="game name" />
-
-    <TextView
-        android:id="@+id/game_date_txt"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:text="Date:"
-        android:textColor="@android:color/black"
-        android:textSize="18sp" />
-
-
-    <TextView
-        android:id="@+id/game_time_txt"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:text="Start time:"
-        android:textColor="@android:color/black"
-        android:textSize="18sp" />
-
-    <Button
-        android:id="@+id/Cancel_button"
-        android:layout_width="150"
-        android:layout_height="50dp"
-        android:layout_marginStart="100dp"
-        android:text="Cancel" />
-
-
-</LinearLayout>
