--- a/app/src/main/res/layout/activity_create_game.xml
+++ b/app/src/main/res/layout/activity_create_game.xml
@@ -10,7 +10,6 @@
         android:id="@+id/game_name_txt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="wrap_content"
         android:text="Game name: "
         android:textColor="@android:color/black"
         android:textSize="18sp" />
@@ -19,7 +18,7 @@
         android:id="@+id/game_name_input"
         android:layout_width="201dp"
         android:layout_height="wrap_content"
-        android:text="game name" />
+        android:hint="game name" />
 
     <TextView
         android:id="@+id/game_type_txt"
@@ -39,7 +38,7 @@
         android:layout_row="1"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="game type" />
+        android:hint="game type" />
 
     <TextView
         android:id="@+id/number_of_players_txt"
@@ -52,10 +51,10 @@
         android:textSize="18sp" />
 
     <EditText
-        android:id="@+id/number of players_input"
+        android:id="@+id/number_of_players_input"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="# of players"
+        android:hint="# of players"
         android:layout_column="1"
         android:layout_row="2"/>
 
@@ -73,7 +72,7 @@
         android:id="@+id/create_game_input"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Location"
+        android:hint="Location"
         android:layout_column="1"
         android:layout_row="3"/>
 
@@ -91,19 +90,20 @@
         android:id="@+id/game_time_txt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Start time:"
+        android:hint="Start time:"
         android:textSize="18sp"
         android:layout_row="4"
         android:layout_column="1"/>
 
     <Button
         android:id="@+id/Cancel_button"
-        android:layout_width="150"
+        android:layout_width="150dp"
         android:layout_height="50dp"
+        android:layout_column="1"
+        android:layout_marginBottom="200dp"
         android:layout_marginStart="10dp"
-        android:layout_marginBottom="200"
-        android:text="Cancel"
         android:layout_row="6"
-        android:layout_column="1"/>
+        android:text="Cancel" />
+
 </GridLayout>
 
