--- a/app/src/main/res/layout/activity_create_game.xml
+++ b/app/src/main/res/layout/activity_create_game.xml
@@ -12,7 +12,8 @@
         android:layout_height="wrap_content"
         android:text="Game name: "
         android:textColor="@android:color/black"
-        android:textSize="18sp" />
+        android:textSize="18sp"
+        />
 
     <EditText
         android:id="@+id/game_name_input"
@@ -68,13 +69,7 @@
         android:layout_column="0"
         android:layout_row="3"/>
 
-    <EditText
-        android:id="@+id/create_game_input"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:hint="Location"
-        android:layout_column="1"
-        android:layout_row="3"/>
+
 
     <TextView
         android:id="@+id/game_date_txt"
@@ -84,26 +79,68 @@
         android:textColor="@android:color/black"
         android:textSize="18sp"
         android:layout_row="4"
-        android:layout_column="0"/>
+        android:layout_column="0"
+        android:layout_margin="10dp"/>
+
+    <TextView
+        android:id="@+id/game_date_input"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:hint="Pick a date"
+        android:textSize="18sp"
+        android:layout_row="4"
+        android:layout_column="1"
+        android:layout_margin="10dp"/>
 
     <EditText
+        android:id="@+id/location_input"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:hint="Location"
+        android:layout_column="1"
+        android:layout_row="3"/>
+
+    <TextView
         android:id="@+id/game_time_txt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:hint="Start time:"
+        android:text="time:"
+        android:textColor="@android:color/black"
         android:textSize="18sp"
-        android:layout_row="4"
-        android:layout_column="1"/>
+        android:layout_row="5"
+        android:layout_column="0"
+        android:layout_margin="10dp"/>
 
     <Button
-        android:id="@+id/Cancel_button"
+        android:id="@+id/game_time_input"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:hint="Pick a time"
+        android:textSize="18sp"
+        android:layout_row="5"
+        android:layout_column="1"
+        android:layout_margin="10dp"/>
+
+    <Button
+        android:id="@+id/Cancel_create_game_button"
         android:layout_width="150dp"
         android:layout_height="50dp"
         android:layout_column="1"
         android:layout_marginBottom="200dp"
         android:layout_marginStart="10dp"
-        android:layout_row="6"
+        android:layout_marginTop="30dp"
+        android:layout_row="7"
         android:text="Cancel" />
+
+    <Button
+        android:id="@+id/confirm_create_game_button"
+        android:layout_width="150dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="30dp"
+        android:layout_column="0"
+        android:layout_row="7"
+        android:text="Confirm" />
 
 </GridLayout>
 
