--- a/app/src/main/res/menu/navigation_menu.xml
+++ b/app/src/main/res/menu/navigation_menu.xml
@@ -8,5 +8,8 @@
         <item
             android:id="@+id/nav_menu_gameCreation"
             android:title="Game Creation" />
+        <item
+            android:id="@+id/nav_menu_logout"
+            android:title="Logout"/>
     </group>
 </menu>
