Add multiline in CreateTeamActivity

--- a/app/src/main/res/layout/activity_create_team.xml
+++ b/app/src/main/res/layout/activity_create_team.xml
@@ -44,6 +44,10 @@
             android:hint="Player Names"
             android:singleLine="true" />
 
+        <RichEditText
+
+            />
+
     </LinearLayout>
 
 
