--- a/app/src/main/res/layout/activity_create_team.xml
+++ b/app/src/main/res/layout/activity_create_team.xml
@@ -42,11 +42,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Player Names"
-            android:singleLine="true" />
+            android:singleLine="false" />
 
-        <RichEditText
-
-            />
 
     </LinearLayout>
 
