Add basic player search
Using RecyclerView and SearchView

--- a/app/src/main/res/layout/item_recycler_list.xml
+++ b/app/src/main/res/layout/item_recycler_list.xml
@@ -52,8 +52,12 @@
                 android:textColor="#727272"
                 android:textSize="14dp" />
 
-        </LinearLayout>
 
+        </LinearLayout>
+            <CheckBox
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/check_list"/>
 
     </LinearLayout>
 
