--- a/app/src/main/res/layout/activity_create_game.xml
+++ b/app/src/main/res/layout/activity_create_game.xml
@@ -42,22 +42,24 @@
         android:hint="game type" />
 
     <TextView
-        android:id="@+id/number_of_players_txt"
+        android:id="@+id/game_players_txt"
         android:layout_column="0"
         android:layout_row="2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Number of players:"
+        android:text="Players: "
         android:textColor="@android:color/black"
         android:textSize="18sp" />
 
-    <EditText
-        android:id="@+id/number_of_players_input"
+    <TextView
+        android:id="@+id/game_players_input"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:hint="# of players"
+        android:hint="player search"
+        android:textSize="18sp"
+        android:layout_row="2"
         android:layout_column="1"
-        android:layout_row="2"/>
+        android:layout_margin="10dp"/>
 
     <TextView
         android:id="@+id/game_location_txt"
