--- a/app/src/main/res/layout/activity_create_team.xml
+++ b/app/src/main/res/layout/activity_create_team.xml
@@ -7,7 +7,7 @@
     android:background="@color/colorPrimary">
 
     <TextView
-        android:id="@+id/team_name_txt"
+        android:id="@+id/tv_team_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Team name: "
@@ -16,14 +16,14 @@
         />
 
     <EditText
-        android:id="@+id/team_name_input"
+        android:id="@+id/et_team_name"
         android:layout_width="201dp"
         android:layout_height="wrap_content"
         android:ems="10"
         android:hint="team name" />
 
     <TextView
-        android:id="@+id/team_sport_txt"
+        android:id="@+id/tv_team_sport"
         android:layout_column="0"
         android:layout_row="1"
         android:layout_width="wrap_content"
@@ -33,7 +33,7 @@
         android:textSize="18sp" />
 
     <EditText
-        android:id="@+id/team_sport_input"
+        android:id="@+id/et_team_sport"
         android:layout_width="201dp"
         android:layout_height="wrap_content"
         android:layout_column="1"
@@ -42,18 +42,9 @@
         android:inputType="textPersonName"
         android:hint="team sport" />
 
-    <TextView
-        android:id="@+id/game_players_txt"
-        android:layout_column="0"
-        android:layout_row="2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Players: "
-        android:textColor="@android:color/black"
-        android:textSize="18sp" />
 
     <TextView
-        android:id="@+id/game_players_input"
+        android:id="@+id/tv_game_players"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:hint="player search"
@@ -65,7 +56,7 @@
 
 
     <Button
-        android:id="@+id/cancel_create_team_button"
+        android:id="@+id/btn_cancel_create_team"
         android:layout_width="150dp"
         android:layout_height="50dp"
         android:layout_column="1"
@@ -76,7 +67,7 @@
         android:text="Cancel" />
 
     <Button
-        android:id="@+id/confirm_create_team_button"
+        android:id="@+id/btn_confirm_create_team"
         android:layout_width="150dp"
         android:layout_height="50dp"
         android:layout_marginStart="10dp"
