Handle adding a challenged team

--- a/app/src/main/res/layout/team_recycler_list.xml
+++ b/app/src/main/res/layout/team_recycler_list.xml
@@ -6,7 +6,9 @@
     android:background="#FFFFFF"
     android:gravity="center_vertical"
     android:orientation="horizontal"
-    android:padding="12dp">
+    android:padding="12dp"
+
+    >
 
     <ImageView
         android:id="@+id/img_user"
