Change design of venue activity

--- a/app/src/main/res/layout/activity_manager_registration.xml
+++ b/app/src/main/res/layout/activity_manager_registration.xml
@@ -48,6 +48,7 @@
                     android:inputType="textPersonName" />
             </android.support.design.widget.TextInputLayout>
             <TextView
+                android:id="@+id/tv_manager_reg_venue_location"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Pick a location"
