Add team edit through my team activity
Clicking on a team from the my team activity gives team info and an option to
edit and save.

--- a/app/src/main/res/menu/navigation_menu.xml
+++ b/app/src/main/res/menu/navigation_menu.xml
@@ -8,6 +8,10 @@
             android:visible="false"/>
 
         <item
+            android:id="@+id/nav_menu_my_teams"
+            android:title="My Teams"
+            />
+        <item
             android:id="@+id/nav_menu_teamCreation"
             android:icon="@drawable/ic_media_play_light"
             android:title="Team Creation" />
