--- a/app/src/main/res/layout/activity_team_info.xml
+++ b/app/src/main/res/layout/activity_team_info.xml
@@ -37,13 +37,19 @@
         android:id="@+id/ll_info_team_players"
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="wrap_content">
 
-        >
         <TextView
+            android:id="@+id/tv_win_loss_ratio"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="TEST"/>
+            android:text="Win/Loss Ratio:"/>
+
+        <EditText
+            android:id="@+id/et_win_loss_ratio"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            />
 
 
     </LinearLayout>
